--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painel de Controle</title>
-</head>
+
+<!-- Incluindo o fragmento do head -->
+<th:block th:replace="fragments/head :: head"></th:block>
+
 <body>
-    <h1 th:text="${message}"></h1> <!-- Usando Thymeleaf para processar a variável -->
+  <!--[if lt IE 8]>
+    <p class="browserupgrade">
+      You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">
+        upgrade your browser</a> to improve your experience.
+    </p>
+  <![endif]-->
+  <div class="wrapper">
+    <th:block th:replace="fragments/header:: header"></th:block>
+    <div class="page-wrap">
+      <th:block th:replace="fragments/sidebar:: sidebar"></th:block>
+      <div class="main-content">
+        teste
+      </div>
+      <th:block th:replace="fragments/footer:: footer"></th:block>
+    </div>
+    <div>
+      <th:block th:replace="fragments/scripts :: scripts"></th:block>
+    </div>
 </body>
+
 </html>
