--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,11 @@
 <footer class="footer" th:fragment="footer">
   <div class="w-100 clearfix">
-      <span class="text-center text-sm-left d-md-inline-block">2025 Ediaristas - Feito com amor por Java</span>
-      <span class="float-none float-sm-right mt-1 mt-sm-0 text-center">Desenvolvido por <a href="https://github.com/jotahtsx" class="text-dark" target="_blank">Jotahdev</a></span>
+      <span class="text-center text-sm-left d-md-inline-block">
+          Copyright © <span th:text="${currentYear}"></span> ThemeKit v2.0. All Rights Reserved.
+      </span>
+      <span class="float-none float-sm-right mt-1 mt-sm-0 text-center">
+          Crafted with <i class="fa fa-heart text-danger"></i> by 
+          <a href="http://lavalite.org/" class="text-dark" target="_blank">Lavalite</a>
+      </span>
   </div>
 </footer>
