--- a/src/main/resources/templates/services/cadastrar.html
+++ b/src/main/resources/templates/services/cadastrar.html
@@ -13,13 +13,47 @@
     <div class="page-wrap">
       <th:block th:replace="fragments/sidebar:: sidebar"></th:block>
       <div class="main-content">
-        teste
+
+        <div class="card">
+        <div class="card-header">
+          <h3>Novo serviço</h3>
+        </div>
+        <div class="card-body">
+          <form class="forms-sample">
+            <div class="form-group">
+              <label for="exampleInputUsername1">Username</label>
+              <input type="text" class="form-control" id="exampleInputUsername1" placeholder="Username">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputConfirmPassword1">Confirm Password</label>
+              <input type="password" class="form-control" id="exampleInputConfirmPassword1" placeholder="Password">
+            </div>
+            <div class="form-group">
+              <label class="custom-control custom-radio">
+                <input type="radio" class="custom-control-input">
+                <span class="custom-control-label">&nbsp;Remember me</span>
+              </label>
+            </div>
+            <button type="submit" class="btn btn-primary mr-2">Submit</button>
+            <button class="btn btn-light">Cancel</button>
+          </form>
+        </div>
       </div>
-      <th:block th:replace="fragments/footer:: footer"></th:block>
+
     </div>
-    <div>
-      <th:block th:replace="fragments/scripts :: scripts"></th:block>
-    </div>
+    <th:block th:replace="fragments/footer:: footer"></th:block>
+  </div>
+  <div>
+    <th:block th:replace="fragments/scripts :: scripts"></th:block>
+  </div>
 </body>
 
 </html>
