--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,11 +1,10 @@
 <footer class="footer" th:fragment="footer">
   <div class="w-100 clearfix">
       <span class="text-center text-sm-left d-md-inline-block">
-          Copyright © <span th:text="${currentYear}"></span> ThemeKit v2.0. All Rights Reserved.
+          Copyright © <span th:text="${currentYear}"></span> ediaristas nenhum direito reservado.
       </span>
       <span class="float-none float-sm-right mt-1 mt-sm-0 text-center">
-          Crafted with <i class="fa fa-heart text-danger"></i> by 
-          <a href="http://lavalite.org/" class="text-dark" target="_blank">Lavalite</a>
+          Desenvolvido por <a href="" class="text-dark" target="_blank">jotahdev</a>
       </span>
   </div>
 </footer>
