--- a/src/main/resources/templates/services/cadastrar.html
+++ b/src/main/resources/templates/services/cadastrar.html
@@ -97,6 +97,7 @@
                 <div class="col-md-12 col-lg-3 col-sm-12 mb-20">
                   <label for="icon">Ícone</label>
                   <select class="form-control" th:field="*{icon}">
+                    <option value="" disabled selected>Selecione um ícone</option>
                     <option th:each="icon : ${icons}" th:text="${icon.name}" th:value="${icon}"></option>
                   </select>
                 </div>
