--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -15,6 +15,7 @@
   <script th:src="@{/libs/d3/dist/d3.min.js}"></script>
   <script th:src="@{/libs/c3/c3.min.js}"></script>
   <script th:src="@{/js/tables.js}"></script>
+  <script th:src="@{/js/datatables.js}"></script>
   <script th:src="@{/js/widgets.js}"></script>
   <script th:src="@{/js/charts.js}"></script>
   <script th:src="@{/js/theme.min.js}"></script>
