--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,6 +1,6 @@
 <div class="app-sidebar colored" th:fragment="sidebar">
   <div class="sidebar-header">
-    <a class="header-brand" href="index.html">
+    <a class="header-brand" href="">
       <div class="logo-img">
         <img th:src="@{/img/brand-white.svg}" class="header-brand-img" alt="ediaristas">
       </div>
@@ -11,15 +11,23 @@
   <div class="sidebar-content">
     <div class="nav-container">
       <nav id="main-menu-navigation" class="navigation-main">
-        <div class="nav-item">
-          <a href="#"><i class="ik ik-bar-chart-2"></i><span>Dashboard</span></a>
+        <div class="nav-item" th:classappend="${currentUrl == '/admin/' || currentUrl == '/admin' ? 'active' : ''}">
+          <a href="/admin"><i class="ik ik-bar-chart-2"></i><span>Visão Geral</span></a>
         </div>
-        <div class="nav-item has-sub">
+        <div class="nav-item has-sub" th:classappend="${currentUrl.startsWith('/admin/servicos') ? 'open active' : ''}">
           <a href="#"><i class="ik ik-package"></i><span>Serviços</span></a>
           <div class="submenu-content">
-            <a href="#" class="menu-item">Session Timeout</a>
+            <a href="/admin/servicos" class="menu-item"
+              th:classappend="${currentUrl == '/admin/servicos' || currentUrl == '/admin/servicos/' ? 'active' : ''}">
+              Lista de Serviços
+            </a>
+            <a href="/admin/servicos/cadastrar" class="menu-item"
+              th:classappend="${currentUrl == '/admin/servicos/cadastrar' || currentUrl == '/admin/servicos/cadastrar/' ? 'active' : ''}">
+              Cadastrar Serviço
+            </a>
           </div>
         </div>
+
       </nav>
     </div>
   </div>
