--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,6 +1,6 @@
 <div class="app-sidebar colored" th:fragment="sidebar">
   <div class="sidebar-header">
-    <a class="header-brand" href="">
+    <a class="header-brand" href="/admin">
       <div class="logo-img">
         <img th:src="@{/img/brand-white.svg}" class="header-brand-img" alt="ediaristas">
       </div>
