--- a/src/main/resources/templates/services/index.html
+++ b/src/main/resources/templates/services/index.html
@@ -34,7 +34,10 @@
                     <td th:text="${service.minimumPrice}"></td>
                     <td width="180">
                       <a class="btn btn-sm btn-warning">Editar</a>
-                      <a class="btn btn-sm btn-danger">Excluir</a>
+                      <a 
+                      th:href="@{/admin/servicos/{id}/excluir(id=${service.id})}" 
+                      class="btn btn-sm btn-danger"
+                      onclick="return confirm('Tem certeza de que deseja excluir este serviço? Esta ação é irreversível e os dados não poderão ser recuperados.')">Excluir</a>
                     </td>
                   </tr>
                 </tbody>
