Atualizando listagem de serviços e adicionando datatables

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -19,11 +19,11 @@
           <div class="submenu-content">
             <a href="/admin/servicos" class="menu-item"
               th:classappend="${currentUrl == '/admin/servicos' || currentUrl == '/admin/servicos/' ? 'active' : ''}">
-              Lista de Serviços
+              Ver todos
             </a>
             <a href="/admin/servicos/cadastrar" class="menu-item"
               th:classappend="${currentUrl == '/admin/servicos/cadastrar' || currentUrl == '/admin/servicos/cadastrar/' ? 'active' : ''}">
-              Cadastrar Serviço
+              Novo Serviço
             </a>
           </div>
         </div>
