--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -3,7 +3,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/1.5.6/perfect-scrollbar.min.js"></script>
-  <script th:src="@{/libs/screenfull/dist/screenfull.js}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/screenfull.js/3.3.3/screenfull.min.js"></script>
   <script th:src="@{/libs/datatables.net/js/jquery.dataTables.min.js}"></script>
   <script th:src="@{/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js}"></script>
   <script th:src="@{/libs/datatables.net-responsive/js/dataTables.responsive.min.js}"></script>
