--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -19,10 +19,9 @@
     <link rel="stylesheet" th:href="@{/libs/icon-kit/dist/css/iconkit.min.css}">
     <link rel="stylesheet" th:href="@{/libs/ionicons/dist/css/ionicons.min.css}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/1.5.6/css/perfect-scrollbar.min.css">
-    <link rel="stylesheet" th:href="@{/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-bs4/1.11.2/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" th:href="@{/libs/jvectormap/jquery-jvectormap.css}">
     <link rel="stylesheet" th:href="@{/libs/tempusdominus-bootstrap-4/build/css/tempusdominus-bootstrap-4.min.css}">
-    <link rel="stylesheet" th:href="@{/libs/weather-icons/css/weather-icons.min.css}">
     <link rel="stylesheet" th:href="@{/libs/c3/c3.min.css}">
     <link rel="stylesheet" th:href="@{/libs/owl.carousel/dist/assets/owl.carousel.min.css}">
     <link rel="stylesheet" th:href="@{/libs/owl.carousel/dist/assets/owl.theme.default.min.css}">
