--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -4,10 +4,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/1.5.6/perfect-scrollbar.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/screenfull.js/3.3.3/screenfull.min.js"></script>
-  <script th:src="@{/libs/datatables.net/js/jquery.dataTables.min.js}"></script>
-  <script th:src="@{/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js}"></script>
-  <script th:src="@{/libs/datatables.net-responsive/js/dataTables.responsive.min.js}"></script>
-  <script th:src="@{/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js}"></script>
+  <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-bs4/1.11.2/dataTables.bootstrap4.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables-responsive/2.2.3/dataTables.responsive.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-responsive-bs4/3.0.3/responsive.bootstrap4.min.js"></script>
   <script th:src="@{/libs/jvectormap/jquery-jvectormap.min.js}"></script>
   <script th:src="@{/libs/jvectormap/tests/assets/jquery-jvectormap-world-mill-en.js}"></script>
   <script th:src="@{/libs/moment/moment.js}"></script>
