--- a/src/main/resources/templates/services/form.html
+++ b/src/main/resources/templates/services/form.html
@@ -19,7 +19,7 @@
             <h3 th:text="${title}"></h3>
           </div>
           <div class="card-body">
-            <form method="post" th:object="${service}" class="forms-sample">
+            <form method="post" th:object="${serviceForm}" class="forms-sample">
               <div class="form-group row">
                 <div class="col-md-12 col-lg-3 col-sm-12 mb-20">
                   <label for="name">Serviço:</label>
@@ -28,9 +28,10 @@
                 </div>
                 <div class="col-md-12 col-lg-3 col-sm-12 mb-20">
                   <label for="minimumPrice">Valor mínimo:</label>
-                  <input type="number" class="form-control form-control-lg" th:field="*{minimumPrice}" 
-                  aria-describedby="minimumPriceHelp">
-                  <small id="minimumPriceHelp" class="form-text text-muted">Defina o valor mínimo para o serviço.</small>
+                  <input type="number" class="form-control form-control-lg" th:field="*{minimumPrice}"
+                    aria-describedby="minimumPriceHelp">
+                  <small id="minimumPriceHelp" class="form-text text-muted">Defina o valor mínimo para o
+                    serviço.</small>
                 </div>
                 <div class="col-md-12 col-lg-3 col-sm-12 mb-20">
                   <label for="quantityOfHours">Quantidade de horas:</label>
